// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VmStatusTypeItem > renders correctly with a DESTROYED status 1`] = `
<div>
   
  <div
    class="chakra-card css-1o7hj91"
  >
    <div
      class="css-14nxscx"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="css-1jy0d03"
        role="progressbar"
        style="width: 0%;"
      />
    </div>
    <div
      class="chakra-card__body css-0"
    >
      <div
        class="css-0"
      >
        <div
          class="chakra-stack css-1bcrv76"
        >
          <svg
            class="chakra-icon css-1o9xtul"
            fill="currentColor"
            focusable="false"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M88,72a8,8,0,0,1,8-8h64a8,8,0,0,1,0,16H96A8,8,0,0,1,88,72Zm8,40h64a8,8,0,0,0,0-16H96a8,8,0,0,0,0,16ZM208,40V216a16,16,0,0,1-16,16H64a16,16,0,0,1-16-16V40A16,16,0,0,1,64,24H192A16,16,0,0,1,208,40Zm-16,0H64V216H192ZM128,168a12,12,0,1,0,12,12A12,12,0,0,0,128,168Z"
            />
          </svg>
          <div
            class="chakra-stack css-m3jj3s"
          >
            <h3
              class="chakra-heading css-0"
            >
              Test VM
            </h3>
          </div>
          <div
            class="css-17xejub"
          />
          <div
            class="chakra-stack css-1pucfsl"
          >
            <div
              class="css-1bizgza"
            >
              <div
                class="css-70qvj9"
              >
                <svg
                  class="chakra-icon css-13otjrl"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 90c44.3 0 86 17.3 117.4 48.6C404.7 170 422 211.7 422 256s-17.3 86-48.6 117.4C342 404.7 300.3 422 256 422s-86-17.3-117.4-48.6C107.3 342 90 300.3 90 256s17.3-86 48.6-117.4C170 107.3 211.7 90 256 90m0-42C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
                  />
                  <path
                    d="M277 360h-42V235h42v125zm0-166h-42v-42h42v42z"
                  />
                </svg>
                <b
                  class="chakra-text css-1nlle1t"
                >
                  Deleted
                </b>
              </div>
            </div>
          </div>
        </div>
        <div
          class="chakra-table__container css-8yk7su"
        >
          <table
            class="chakra-table css-0"
          >
            <tbody
              class="css-0"
            >
              <tr
                class="css-0"
              >
                <td
                  class="css-0"
                >
                  vCPUs
                </td>
                <td
                  class="css-0"
                >
                  <p
                    class="chakra-text css-0"
                  >
                    4
                  </p>
                </td>
              </tr>
              <tr
                class="css-0"
              >
                <td
                  class="css-0"
                >
                  memory
                </td>
                <td
                  class="css-0"
                >
                  <p
                    class="chakra-text css-0"
                  >
                    16
                     GB
                  </p>
                </td>
              </tr>
              <tr
                class="css-0"
              >
                <td
                  class="css-0"
                >
                  storage
                </td>
                <td
                  class="css-0"
                >
                  <p
                    class="chakra-text css-0"
                  >
                    100
                     GB
                  </p>
                </td>
              </tr>
              <tr
                class="css-0"
              >
                <td
                  class="css-0"
                >
                  OS
                </td>
                <td
                  class="css-xs9fqv"
                >
                  <p
                    class="chakra-text css-1mrk1dy"
                  >
                    Ubuntu 20.04
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="chakra-card__footer css-oh8sa6"
    >
      <div
        class="chakra-stack css-a225zj"
      >
        <span
          class="css-1ehzxp"
        >
          <img
            class="chakra-image css-1pg8bi"
            src="/images/azure.svg"
          />
        </span>
        <div
          class="css-17xejub"
        />
        <a
          class="chakra-button css-4xx2wk"
          href="/vm/123"
        >
          <span
            class="chakra-button__icon css-1wh2kri"
          >
            <svg
              aria-hidden="true"
              class="chakra-icon css-onkibi"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g
                fill="currentColor"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              >
                <circle
                  cx="12"
                  cy="12"
                  fill="none"
                  r="11"
                  stroke="currentColor"
                />
                <line
                  fill="none"
                  x1="11.959"
                  x2="11.959"
                  y1="11"
                  y2="17"
                />
                <circle
                  cx="11.959"
                  cy="7"
                  r="1"
                  stroke="none"
                />
              </g>
            </svg>
          </span>
          Info
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`VmStatusTypeItem > renders correctly with a RUNNING status 1`] = `
<div>
   
  <div
    class="chakra-card css-1o7hj91"
  >
    <div
      class="css-14nxscx"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="99.99976388888889"
        class="css-1jy0d03"
        role="progressbar"
        style="width: 99.9997638888889%;"
      />
    </div>
    <div
      class="chakra-card__body css-0"
    >
      <div
        class="css-0"
      >
        <div
          class="chakra-stack css-1bcrv76"
        >
          <svg
            class="chakra-icon css-1o9xtul"
            fill="currentColor"
            focusable="false"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M88,72a8,8,0,0,1,8-8h64a8,8,0,0,1,0,16H96A8,8,0,0,1,88,72Zm8,40h64a8,8,0,0,0,0-16H96a8,8,0,0,0,0,16ZM208,40V216a16,16,0,0,1-16,16H64a16,16,0,0,1-16-16V40A16,16,0,0,1,64,24H192A16,16,0,0,1,208,40Zm-16,0H64V216H192ZM128,168a12,12,0,1,0,12,12A12,12,0,0,0,128,168Z"
            />
          </svg>
          <div
            class="chakra-stack css-m3jj3s"
          >
            <h3
              class="chakra-heading css-0"
            >
              Test VM
            </h3>
            <h3
              class="chakra-heading css-0"
            >
              IP: 
              192.168.1.1
            </h3>
          </div>
          <div
            class="css-17xejub"
          />
          <div
            class="chakra-stack css-1pucfsl"
          >
            <div
              class="css-1873brd"
            >
              <div
                class="css-70qvj9"
              >
                <svg
                  class="chakra-icon css-13otjrl"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="m10 16.5 6-4.5-6-4.5v9zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                  />
                </svg>
                <b
                  class="chakra-text css-1nlle1t"
                >
                  Running
                </b>
              </div>
            </div>
            <div
              class="css-0"
            >
              <span
                class="css-1qm7lvz"
              >
                2 hours remaining
              </span>
            </div>
          </div>
        </div>
        <div
          class="chakra-table__container css-8yk7su"
        >
          <table
            class="chakra-table css-0"
          >
            <tbody
              class="css-0"
            >
              <tr
                class="css-0"
              >
                <td
                  class="css-0"
                >
                  vCPUs
                </td>
                <td
                  class="css-0"
                >
                  <p
                    class="chakra-text css-0"
                  >
                    4
                  </p>
                </td>
              </tr>
              <tr
                class="css-0"
              >
                <td
                  class="css-0"
                >
                  memory
                </td>
                <td
                  class="css-0"
                >
                  <p
                    class="chakra-text css-0"
                  >
                    16
                     GB
                  </p>
                </td>
              </tr>
              <tr
                class="css-0"
              >
                <td
                  class="css-0"
                >
                  storage
                </td>
                <td
                  class="css-0"
                >
                  <p
                    class="chakra-text css-0"
                  >
                    100
                     GB
                  </p>
                </td>
              </tr>
              <tr
                class="css-0"
              >
                <td
                  class="css-0"
                >
                  OS
                </td>
                <td
                  class="css-xs9fqv"
                >
                  <p
                    class="chakra-text css-1mrk1dy"
                  >
                    Ubuntu 20.04
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="chakra-card__footer css-oh8sa6"
    >
      <div
        class="chakra-stack css-a225zj"
      >
        <span
          class="css-1ehzxp"
        >
          <img
            class="chakra-image css-1pg8bi"
            src="/images/azure.svg"
          />
        </span>
        <div
          class="css-17xejub"
        />
        <a
          class="chakra-button css-4xx2wk"
          href="/vm/123"
        >
          <span
            class="chakra-button__icon css-1wh2kri"
          >
            <svg
              aria-hidden="true"
              class="chakra-icon css-onkibi"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g
                stroke="currentColor"
                stroke-width="1.5"
              >
                <path
                  d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
                  fill="none"
                  stroke-linecap="round"
                />
                <path
                  d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
                  fill="none"
                  stroke-linecap="round"
                />
                <circle
                  cx="12"
                  cy="12"
                  fill="none"
                  r="11.25"
                  stroke-miterlimit="10"
                />
              </g>
            </svg>
          </span>
          Help
        </a>
      </div>
    </div>
  </div>
</div>
`;
